<?xml version="1.0"?>
<package>
  <name>bosch_indra_drive_test</name>
  <version>0.0.0</version>
  <description>The bosch_indra_drive_test package</description>
  <maintainer email="markjones112358@gmail.com">Mark Hedley Jones</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bosch_indra_driver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>bosch_indra_driver</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>joy</run_depend>

</package>